Add search and profile settings features
Introduced new search bar and related hooks for searching novels, users, and suggestions. Added profile settings page and updated profile and authentication components for improved user management. Also added new landing page assets and integrated react-icons dependency.

--- a/src/locale/ar/translation.json
+++ b/src/locale/ar/translation.json
@@ -104,10 +104,8 @@
     },
     "aboutMe": {
       "joined": "انضم",
-      "red": "قرأ",
-      "chapter": "فصل",
-      "gave": "أعطى",
-      "rating": "تقييم",
+      "novelsInLibrary": "رواية في المكتبة",
+      "rating": "مراجعة",
       "commented": "قام بالتعليق",
       "times": "مرة",
       "followers": "المتابعين",
