--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -104,12 +104,10 @@
     },
     "aboutMe": {
       "joined": "Joined",
-      "red": "Red",
-      "chapter": "Chapter",
-      "gave": "Gave",
-      "rating": "Rating",
+      "novelsInLibrary": "novels in library",
+      "rating": "reviews",
       "commented": "Commented",
-      "times": "Times",
+      "times": "times",
       "followers": "Followers",
       "following": "Following",
       "like": "Like",
