Limit genre selection to 4 in novel creation and editing
Added validation to restrict the maximum number of genres to 4 when creating or editing a novel. Updated error messages and translations in both Arabic and English locales. The genre select dropdown now filters out already selected genres in the edit page.

--- a/src/locale/ar/translation.json
+++ b/src/locale/ar/translation.json
@@ -193,7 +193,8 @@
         "maxSize": "يجب أن يكون حجم الصورة أقل من 10 ميجابايت",
         "title": "عنوان الرواية مطلوب",
         "summary": "الملخص مطلوب",
-        "genre": "اختر تصنيفًا واحدًا على الأقل"
+        "genre": "اختر تصنيفًا واحدًا على الأقل",
+        "maxGenres": "الحد الأقصى للأنواع هو 4"
       },
       "toast": {
         "success": "تم إنشاء الرواية بنجاح!",
