Refactor profile and works terminology, improve UTC date parsing
Updated profile navigation and related UI to use 'أعمالي'/'My Works' instead of 'رواياتي'/'My Novels' for consistency. Improved UTC date parsing for timestamps across notifications, work summary, dashboard, chapter editor, and edit pages to ensure correct date handling. Enhanced UI details in NovelCard, AboutMe, FollowersModal, and MyNovels components for better clarity and responsiveness. Updated translation files for Arabic and English to reflect terminology changes.

--- a/src/locale/ar/translation.json
+++ b/src/locale/ar/translation.json
@@ -96,9 +96,9 @@
   },
   "profilePage": {
     "profileNav": {
-      "aboutMe": "عنى",
-      "myNovels": "روايات بقلمى",
-      "library": "قوائم القراءة",
+      "aboutMe": "عني",
+      "myWorks": "أعمالي",
+      "library": "قوائم قراءتي",
       "badges": "قاعة الشارات",
       "profileSettings": "تعديل الملف الشخصى"
     },
