Enhance register form validation and UX feedback
Added real-time validation, character counters, and password strength indicator to the registration form. Updated validation logic for username and display name to enforce 3-20 character limits and no spaces for username. Improved error and success feedback with icons and color cues. Updated translation files and profile update modal to match new validation rules.

--- a/src/locale/ar/translation.json
+++ b/src/locale/ar/translation.json
@@ -78,10 +78,17 @@
     },
     "validation": {
       "fieldRequired": "هذا الحقل مطلوب",
+      "usernameRequired": "اسم المستخدم مطلوب",
       "usernameInvalid": "يجب أن يحتوي اسم المستخدم على 3 أحرف على الأقل وبدون مسافات",
+      "usernameTooShort": "يجب أن يحتوي اسم المستخدم على 3 أحرف على الأقل",
+      "usernameTooLong": "يجب ألا يتجاوز اسم المستخدم 20 حرف",
+      "usernameNoSpaces": "اسم المستخدم لا يمكن أن يحتوي على مسافات",
       "emailRequired": "البريد الإلكتروني مطلوب",
       "emailInvalid": "يرجى إدخال عنوان بريد إلكتروني صحيح",
+      "displayNameRequired": "الاسم المعروض مطلوب",
       "displayNameInvalid": "يجب أن يحتوي الاسم المعروض على 3 أحرف على الأقل",
+      "displayNameTooShort": "يجب أن يحتوي الاسم المعروض على 3 أحرف على الأقل",
+      "displayNameTooLong": "يجب ألا يتجاوز الاسم المعروض 20 حرف",
       "passwordRequired": "كلمة المرور مطلوبة",
       "passwordTooShort": "يجب أن تحتوي كلمة المرور على 6 أحرف على الأقل",
       "confirmPasswordRequired": "يرجى تأكيد كلمة المرور",
