--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -78,10 +78,17 @@
     },
     "validation": {
       "fieldRequired": "Field is required",
+      "usernameRequired": "Username is required",
       "usernameInvalid": "Username must have at least 3 characters and no spaces",
+      "usernameTooShort": "Username must be at least 3 characters",
+      "usernameTooLong": "Username must be at most 20 characters",
+      "usernameNoSpaces": "Username cannot contain spaces",
       "emailRequired": "Email is required",
       "emailInvalid": "Please enter a valid email address",
+      "displayNameRequired": "Display name is required",
       "displayNameInvalid": "Display name must have at least 3 characters",
+      "displayNameTooShort": "Display name must be at least 3 characters",
+      "displayNameTooLong": "Display name must be at most 20 characters",
       "passwordRequired": "Password is required",
       "passwordTooShort": "Password must be at least 6 characters long",
       "confirmPasswordRequired": "Please confirm your password",
